WS composer spacing fix, tests passing

--- a/src/assets/style/sidebar.scss
+++ b/src/assets/style/sidebar.scss
@@ -119,6 +119,7 @@
   color: $bluefour;
   cursor: pointer;
   display: inline-block;
+  margin-top: 8px;
   font-size: 0.9rem;
   outline: 0 none;
   font-weight: bold;
